<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/logo_login"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorPrimary">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/login"
            android:textColor="#FDFCFC"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_margin="10dp"
            android:indeterminateTint="#EEEBEB"
            android:visibility="invisible" />


    </RelativeLayout>



    <AutoCompleteTextView
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Email"
        android:layout_below="@+id/logo_login"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:textSize="15sp"
        android:drawableStart="@drawable/ic_email_black_24dp"
        android:drawableTint="#948D8D"
        android:drawablePadding="10dp"
        />





    <android.support.design.widget.TextInputLayout
        android:id="@+id/login_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_email"

        app:hintEnabled="false"
        app:passwordToggleEnabled="true"

        >

        <android.support.design.widget.TextInputEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock_black_24dp"
            android:drawableTint="#948D8D"
            android:drawablePadding="10dp"
            android:textSize="15sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/login_password1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/colorAccent"
        android:enabled="false"
        android:gravity="center"
        android:text="LOGIN"
        android:textSize="15sp" />






    <TextView
        android:id="@+id/forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonLogin"
        android:text="@string/forget_password"
        android:layout_alignRight="@+id/buttonLogin"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textColor="#000"/>

    <TextView
        android:id="@+id/create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="end"
        android:drawablePadding="2dp"
        android:gravity="center"
        android:text="@string/sign_up"
        android:layout_toRightOf="@+id/message"
        android:textStyle="bold"
        android:textColor="@color/colorFLoatingButton"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:id="@+id/message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_account"
        android:gravity="center"
        android:textColor="#000"
        android:layout_marginStart="10dp"
        android:layout_alignTop="@+id/create_account"
        android:layout_below="@+id/forget"
        android:layout_marginBottom="10dp"


        />




</RelativeLayout>