<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:paddingBottom="50dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/colorPrimary">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:text="SIGN UP"
                android:textColor="#FAF6F6"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/sign_up_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:drawableTint="#ffff"
                android:drawableStart="@drawable/ic_back" />

            <ProgressBar
                android:id="@+id/progressBar2"
                style="?android:attr/progressBarStyle"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:indeterminateTint="#ffff"
                android:visibility="invisible" />


        </RelativeLayout>




        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:drawableEnd="@drawable/icon_check"
                android:drawableTint="#27FFFFFF"

                android:hint="Email"
                android:inputType="textEmailAddress"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:drawableEnd="@drawable/icon_check"
                android:drawableTint="#27FFFFFF"
                android:hint="@string/name"
                android:textSize="15sp"
                tools:targetApi="m" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintEnabled="true"
            app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signup_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:hint="@string/password_length_7"
                android:inputType="textPassword"
                android:textSize="15sp" />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textColor="@color/colorAccent"
            android:layout_marginStart="10dp"
            android:textStyle="bold"

            />

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"

            >

            <RadioButton
                android:id="@+id/radio_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Male"
                android:checked="true"
                />
            <RadioButton
                android:id="@+id/radio_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/female"
                />

        </RadioGroup>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/age"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <Spinner
            android:id="@+id/spinner_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#C4C2C2"
            android:layout_marginTop="2dp"
            android:dropDownWidth="50dp"

            android:layout_marginStart="10dp">

        </Spinner>


        <TextView
            android:id="@+id/weight_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/weight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C4C2C2"
            android:layout_marginTop="2dp"
            android:dropDownWidth="50dp"
            android:textSize="15sp"
            android:hint="@string/kilogram"
            android:inputType="number"
            android:layout_marginStart="10dp">

        </EditText>


        <TextView
            android:id="@+id/height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/height"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            android:layout_marginStart="10dp"/>

        <EditText
            android:id="@+id/height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#C4C2C2"
            android:layout_marginTop="2dp"
            android:dropDownWidth="50dp"
            android:hint="@string/centimeter"
            android:textSize="15sp"
            android:inputType="number"
            android:layout_marginStart="10dp">

        </EditText>








        <Button
            android:id="@+id/signup_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/colorAccent"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/sign_up1"
            android:textColor="#9B9999"
            android:textSize="15sp" />




    </LinearLayout>
</ScrollView>